yupgup.css
/* ... */
.gridList li {
  margin-bottom: var(--space);
  list-style-position: inside;
  list-style-type: disc;
}


/* Work */
.clientList {
  display: flex;
  flex-flow: row wrap;
}

.clientList li {
  display: inline-flex;
  align-items: center;
  margin-bottom: calc(var(--space) * 3);
  margin-right: calc(var(--space) * 3);
}

.clientList img {
  height: 80px;
  max-width: 100%;
}

.clientList .landscape-logo {
  height: 30px;
}

.testimonial-text,
.testimonial-attr {
  position: relative;
}

.testimonial-text:before {
  position: absolute;
  top: -.6rem;
  left: -3rem;
  display: block;
  font-size: 6rem;
  display: block;
  content: "\201C";
  opacity: .7;
  line-height: 1;
}

.testimonial-attr {
  font-size: .9rem;
}

.testimonial-attr:before {
  margin-right: .5em;
  width: 1.25rem;
  height: 2px;
  display: inline-block;
  vertical-align: middle;
  background: currentColor;
  line-height: 1;
  content: "";
}


/* About */
.gup {
  margin-top: calc(var(--space) * 2);
}

.gup-avatar {
  display: flex;
  margin: 0 0 var(--space);
  padding: calc(var(--space) * 1.5);
  max-width: 300px;
  min-width: 240px;
  border-radius: 10% 30%;
  background-image: url('img/bio-bg1.svg');
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 180% 150%;
  align-items: center;
  justify-content: center;
}

.gup-avatar img {
  border: 6px solid #FFFFFF;
  border-radius: 10% 30%;
}

.gup:nth-child(odd) .gup-avatar {
  border-radius: 30% 10%;
  background-image: url('img/bio-bg2.svg');
}

.gup:nth-child(odd) img {
  border-radius: 30% 10%;
}

.gup-card {
  flex: 0 1 54ch;
}

.gup-name,
.gup-title {
  margin-bottom: var(--space);
}

.gup-title {
  text-transform: uppercase;
}

/* Contact */
.contactNav {
  margin: 1.5rem 0;
}

.contactNav .btn {
  font-size: 1.8rem;
}

/* Social Icons */
.socialNav {
  margin: 3rem 0;
}

.socialNav a {
  display: inline-block;
  margin-right: 1.5rem;
  box-shadow: none;
}

.socialNav .socialIcon {
  display: inline-block;
  width: 48px;
  height: 48px;
  fill: var(--camelot);
}

.socialNav .socialIcon:hover {
  fill: var(--dusk);
}

.socialNav .socialIcon:last-child {
  margin-right: 0;
}

/*
  LANDING PAGES
*/
.topHat {
  display: block;
  padding: 6px 10px 12px;
  background: whitesmoke;
  font-size: .8rem;
  text-decoration: none;
}

.topHat:before {
  display: inline-block;
  margin-right: .3em;
  height: 1rem;
  width: 1rem;
  content: "←";
}

/*
  CASE STUDY
*/

.caseStudyPage .siteMain {
  margin-top: 0;
}

.caseStudyHeader {
  position: relative;
  margin-bottom: 10vw;
  background: var(--finn);
  text-align: center;
  color: white;
}

.caseStudyHeader:after {
  bottom: -8vw;
  height: 10vw;
  background-image: url('../img/swish3.svg');
}

.caseStudyHeader .lead {
  margin-left: auto;
  margin-right: auto;
}

.workDisplay {
  margin-bottom: var(--space);
  padding-left: var(--gutters);
  padding-right: var(--gutters);
}

.workDisplay .container {
  text-align: center;
}

.workDisplay--list .img {
  display: block;
  margin-bottom: var(--space);
}

@media (min-width: 720px) {
  .workDisplay--list .container {
    display: flex;
    justify-content: space-between;
  }

  .workDisplay--list .img {
    margin-bottom: 0;
    max-width: calc(100% * 1/3 - 20px);
  }
}


/*
  MEDIA QUERIES
*/

@media (min-width: 720px) {
  .block-heading,
  .lead,
  .subLead,
  .siteNav ul {
    max-width: 50ch;
  }

  .slogan,
  .newsletter {
    padding-bottom: 12vw;
  }

  .siteNav ul {
    margin: 0 auto;
    justify-content: space-between;
  }

  .siteNav li {
    width: auto;
  }

  .siteMain {
    margin-top: 8vw;
  }

  .services .block-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  /* TODO: Too specific! Bad developer! Bad! */
  .services .block-header .wrap {
    flex: 1;
    margin-right: calc(var(--space) * 2);
  }

  .services .block-header img {
    display: inline-flex;
    min-width: 240px;
  }

  .gridList {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
  }

  .gridList li {
    box-sizing: border-box;
    width: 33.33%;
  }

  .clientList li {
    display: flex;
    align-items: center;
    margin-right: calc(var(--space) * 6);
  }

  .clientList img {
    height: 100px;
  }

  .clientList .landscape-logo {
    height: 40px;
  }

  .gup {
    display: flex;
  }

  .gup-avatar {
    margin-right: calc(var(--space) * 2);
  }

  .gup-card {
    padding-top: 2rem;
  }

  .socialNav a {
    margin-right: 1.5rem;
  }

  .socialNav .socialIcon {
    width: 64px;
    height: 64px;
  }
}

@media (min-width: 1000px) {
  :root {
    --font-size        : 20px;
    --block-space      : calc(var(--space) * 3);
  }

  .slogan-text {
    font-size: 3rem;
  }
}

